@@ -5,8 +5,8 @@ find_package(Qt5Concurrent 5.11 REQUIRED)
 find_package(Qt5QuickControls2 5.11 REQUIRED)
 find_package(Qt5LinguistTools 5.11 REQUIRED)
 find_package(Qt5Svg 5.11 REQUIRED)
-find_package(Qt5WebView 5.11 REQUIRED)
 find_package(Qt5QuickCompiler REQUIRED)
+find_package(Qt5WebView 5.11)
 
 qt5_add_translation(pentobi_QM
     qml/i18n/qml_de.ts
@@ -26,7 +26,6 @@ qt5_add_resources(pentobi_RC_SRCS
     ../books/pentobi_books.qrc
     ../icon/pentobi_icon.qrc
     ../icon/pentobi_icon_desktop.qrc
-    ../../doc/help.qrc
     )
 
 qtquick_compiler_add_resources(pentobi_RC_SRCS_QML
@@ -63,6 +62,7 @@ target_compile_definitions(pentobi PRIVATE
     QT_DEPRECATED_WARNINGS
     QT_DISABLE_DEPRECATED_BEFORE=0x051100
     QT_NO_NARROWING_CONVERSIONS_IN_CONNECT
+    PENTOBI_HELP_DIR="${CMAKE_INSTALL_FULL_DATAROOTDIR}/help"
     VERSION="${PENTOBI_VERSION}"
     )
 
@@ -73,8 +73,13 @@ target_link_libraries(pentobi
     Qt5::Qml
     Qt5::QuickControls2
     Qt5::Svg
-    Qt5::WebView
     Threads::Threads
     )
+
+if (Qt5WebView_FOUND AND NOT PENTOBI_OPEN_HELP_EXTERNALLY)
+    target_link_libraries(pentobi Qt5::WebView)
+else()
+    target_compile_definitions(pentobi PRIVATE PENTOBI_OPEN_HELP_EXTERNALLY)
+endif()
 
 install(TARGETS pentobi DESTINATION ${CMAKE_INSTALL_BINDIR})
