@@ -1,6 +1,12 @@
 Version 16.1.x (v16-fixes)
 ==========================
 
+* The desktop version of Pentobi can now be built on platforms that do
+  not support Qt5WebView. If Qt5WebView is not found or the cmake option
+  -DPENTOBI_OPEN_HELP_EXTERNALLY=1 is used explicitely, the help files will
+  be displayed in an external web browser.
+* The help files are no longer compiled into the resources but installed
+  again in DATAROOTDIR/help.
 * Fixed keyboard navigation in file dialog.
 * Status message was not shown after successful Export/ASCII Art and
   Android Media Scanner was not informed to make the saved file
